fixed text alignment

--- a/riddler/css/style.css
+++ b/riddler/css/style.css
@@ -9,7 +9,6 @@ body{
     font-family         : "Ubuntu", serif;
     color               : #ffffff;
     font-size           : 20pt;
-    text-align          : justify;
     cursor              : default;
     -webkit-user-select : none;
     -moz-user-select    : none;
